# elysium-descent

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  Scarb.toml  WARP.md  nav_analyzer.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  test-contract.yaml
client/: CLAUDE.md  Cargo.toml  ROADMAP.md  nav.json
client/AI_DOCS/: Bevy.md
client/assets/dialogue/: books.yarn
client/assets/models/: first-aid-kit.glb
client/assets/models/food/: pumpkin.glb
client/src/: keybinding.rs  main.rs
client/src/constants/: boundary.rs  collectibles.rs  dojo.rs  mod.rs  movement.rs
client/src/game/: components.rs  level_manager.rs  mod.rs  resources.rs
client/src/levels/: level_1.json  level_2.json
client/src/rendering/: mod.rs
client/src/rendering/cameras/: mod.rs  player_camera.rs
client/src/resources/: assets.rs  mod.rs  navigation.rs  starknet.rs
client/src/resources/audio/: audio.rs  mod.rs  sfx.rs
client/src/screens/: fight.rs  gameplay.rs  loading.rs  main_menu.rs  mod.rs  pregame_loading.rs  settings.rs
client/src/systems/: book_interaction.rs  boundary.rs  character_controller.rs  collectibles.rs  collectibles_config.rs  dialogue_view.rs  enemy_ai.rs  level_manager.rs  level_manager_test.rs  mod.rs  nav_loader.rs  objectives.rs  timer.rs
client/src/systems/dojo/: create_game.rs  mod.rs  pickup_item.rs
client/src/ui/: dialog.rs  dynamic_hud.rs  inventory.rs  mod.rs  modal.rs  styles.rs  widgets.rs
client/wasm-out/: client.d.ts  client.js  client_bg.wasm.d.ts
contracts/: README.md  Scarb.toml  dojo_dev.toml  dojo_slot.toml  katana_slot.toml  manifest_dev.json  manifest_slot.json  torii_dev.toml  torii_slot.toml
contracts/examples/: level_creation_example.cairo
contracts/src/: lib.cairo  models.cairo
contracts/src/systems/: actions.cairo
contracts/src/tests/: test_contract.cairo
crates/bevy_dojo/: Cargo.toml
crates/bevy_dojo/src/: lib.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/gdd/: executive_pitch.md  gameplay.md  level_design.md  overview.md  story.md  ui_ux.md
docs/src/td/: architecture.md  programming_standards.md
