[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
bevy_asset_loader.workspace = true
bevy_enhanced_input.workspace = true
bevy_kira_audio.workspace = true
bevy_lunex.workspace = true
log.workspace = true
starknet.workspace = true
tracing.workspace = true

[lints]
workspace = true
