[package]
name = "client"
version = "0.1.0"
edition = "2024"
categories = ["game"]
description = "Elysium Descent is a roguelike game inspired by lootsurvivor built with Bevy"
homepage = "https://realmofra.com"
authors = [
  "Okhai Omotuebe <okhaio@protonmail.com>"
]
keywords = ["game", "bevy", "roguelike"]
repository = "https://github.com/realmofra/elysium_descent"

[dependencies]
avian3d = { version = "0.3.1", features = ["debug-plugin"] }
bevy = { version = "0.16.0", default-features = false, features = ["animation", "bevy_asset", "bevy_color", "bevy_core_pipeline", "bevy_gilrs", "bevy_gizmos", "bevy_gltf", "bevy_mesh_picking_backend", "bevy_pbr", "bevy_picking", "bevy_render", "bevy_scene", "bevy_sprite", "bevy_sprite_picking_backend", "bevy_state", "bevy_text", "bevy_ui", "bevy_ui_picking_backend", "bevy_window", "bevy_winit", "custom_cursor", "hdr", "multi_threaded", "png", "jpeg", "smaa_luts", "sysinfo_plugin", "tonemapping_luts", "webgl2", "x11"] }
bevy_asset_loader = "0.23.0"
bevy_enhanced_input = "0.12.0"
bevy_gltf_animation = "0.2.0"
bevy_kira_audio = { version = "0.23.0", features = ["mp3"] }
bevy_lunex = "0.4.1"
futures = "0.3.31"
futures-lite = "2.6.0"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
once_cell = "1.21.3"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
async-trait = "0.1"
# Starknet dependencies - using direct HTTP calls for better compatibility
hex = "0.4"

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats
# In some cases they may still signal poor code quality however, so consider
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natur
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Native (non-wasm) tokio dependency
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }

# WebAssembly (wasm32) tokio dependency
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.46.1", features = ["sync", "macros", "io-util", "rt", "time"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"